change jdk11 -> jdk8